--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {},
   "scripts": {
     "dev": "vitepress dev docs",
+    "build": "vitepress build docs",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
